sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2()  {
  
  var c = 1
  for (i <- 1 to getValueCount() - c){
     if (isSmaller(i,i-1)){
        swap(i, i-1)
        continue = true
      } 
   }
   c += 1
}